# rssd_proc_agent

./: .gitignore  CLAUDE.md  CSV_TRANSFORMATIONS.CSV  LICENSE.txt  README.md  pyproject.toml  requirements.txt
example/: example_company_1_matched.csv  example_company_1_validated.csv  example_company_2.csv
ffiec_rssd_agent/: __init__.py  __main__.py  agent.py  db.py  legacy_tools.py  load_data.py  system_prompt.py  tools.py  validation.py
